# gpustat-rs

./: .gitignore  Cargo.toml  README.md
src/: core.rs  display.rs  main.rs
