[package]
name = "gpustat-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gpustat"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
colored = "2"
nvml-wrapper = "0.11"
procfs = "0.16"
serde = { version = "1", features = ["derive"] }
users = "0.11"
chrono = { version = "0.4", features = ["serde"] }
hostname = "0.3"
serde_json = "1"
